# GotIt

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/: index.html  launcher.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  LauncherApp.tsx  index.css  launcher.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/hooks/: useTauriWindow.ts  useVoice.ts  useWebSocket.ts
frontend/src/stores/: appStore.ts
gotit/: __init__.py  app.py  config.py  main.py
gotit/adapters/activity/: aliases.py  recent_watcher.py  tracker.py  window_poller.py
gotit/api/: __init__.py  dependencies.py  routes.py  websocket.py
gotit/domain/: events.py  models.py  pipeline.py  ports.py
gotit/services/: __init__.py  activity_store.py  container.py  event_bus.py  filter_rules.py  learned_mappings.py  session.py
prompt/features/: activity-tracker.md  quick-commands.md  search-result-filter.md
prompt/plan/: idea.md  plan.md  tasks.md
prompt/refinements/: fuzzy-search-query-optimization.md  intent-prompt-generalization.md
scripts/: build-all.bat  build-debug.bat  build-release.bat  download_model.py  setup.bat
tests/: conftest.py
tests/integration/: test_api.py  test_everything.py  test_stt.py
tests/unit/: test_activity_store.py  test_aliases.py  test_executor.py  test_filter_rules.py  test_fuzzy_resolve.py  test_intent_match_mode.py  test_intent_parsing.py  test_learned_mappings.py  test_models.py  test_pipeline.py
(+18 files in other folders)
