[project]
name = "gotit"
version = "0.1.0"
description = "Voice-driven local AI interaction layer for Windows"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "anthropic>=0.43.0",
    "httpx>=0.28.0",
    "sounddevice>=0.5.0",
    "numpy>=2.1.0",
]

[project.scripts]
gotit = "gotit.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["gotit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
